# Packet

./: MANIFEST.in  README.rst  TamperMonkey_script.js  pyproject.toml  setup.cfg  setup.py
application/AttivitaProgettuale/: admin.py  apps.py  models.py  urls.py  views.py  views_old.py
application/AttivitaProgettuale/migrations/: 0001_initial.py  0002_initial.py  0003_alter_richiesta_autocertificazione_and_more.py  0004_studente_delete_professore_and_more.py  0005_remove_studente_cognome_remove_studente_email_and_more.py
application/AttivitaProgettuale/static/Moduli/: base.css  codice_random.txt  form.css  modulo.css
application/AttivitaProgettuale/templates/AttivitaProgettuale/: gestore_richieste_new.html  lista_richieste.html  paginaProva.html  prova.html  richiesta_compilata.html  richiesta_confirm_delete.html  richiesta_new_form.html  static_success.html  template.html
application/AttivitaProgettuale/templates/registration/: login.html
django-polls/polls/: admin.py  models.py  urls.py  views.py
django-polls/polls/static/Moduli/: codice_random.txt  list.css
django-polls/polls/templates/polls/: gestore_richieste.html  lista_richieste.html  richiesta_compilata.html  richiesta_new_form.html  static_success.html
django-polls/polls/templates/registration/: login.html
django-polls/polls_AndreVale025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
