[metadata]
name = AttivitaProgettuale-VAProject
version = 0.4.22
description = A Django app to conduct web-based AttivitaProgettuale.
long_description = file: README.rst
url = https://www.example.com/
author = Your Name
author_email = yourname@example.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir = application
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0  # Replace "X.Y" as appropriate
    django-widget-tweaks
    requests >= 2.28.0
    xhtml2pdf >= 0.2.8

[options.packages.find]
where = application

